--- a/dash/Wrn.html
+++ b/dash/Wrn.html
@@ -28,7 +28,7 @@ window.player = player;
 window.ui = ui; 
 player.addEventListener('error', onPlayerErrorEvent); 
 controls.addEventListener('error', onUIErrorEvent); 
-try{await player.load('https://cdn.sky4k.top/live/warna/index.mpd'); 
+try{await player.load('https://cdn.sky4k.top/live/warna/'); 
 console.log('The video has now been loaded!');} catch (error) {onPlayerError(error);}} 
 function onPlayerErrorEvent(errorEvent) {onPlayerError(event.detail);} 
 function onPlayerError(error) {console.error('Error code', error.code, 'object', error);} 
