--- a/dash/S3.html
+++ b/dash/S3.html
@@ -17,7 +17,7 @@ player.configure({
   drm: {
     clearKeys: {
       // 'key-id-in-hex': 'key-in-hex',
-      'a522db0e2c8b90c38b64187018648a10': 'cf66fd59fe28f45418628313e06d52da'
+      'ead0335d60401225727a6d531e9c2710': '1ee3b252227c5c2ec9378c833d2e14ff'
     }
   }
 });
@@ -26,7 +26,7 @@ window.player = player;
 window.ui = ui; 
 player.addEventListener('error', onPlayerErrorEvent); 
 controls.addEventListener('error', onUIErrorEvent); 
-try{await player.load('https://linears-playback.astro.com.my/vsg/419f-0QLzUU_yAy68LVYoaslEXllokzXxvKiGeUrcGC38=L8B5/dash-wv/jitp-linearwm/2701/default_ott.mpd'); 
+try{await player.load('https://aqfadtv.xyz/live/arena2/index.mpd'); 
 console.log('The video has now been loaded!');} catch (error) {onPlayerError(error);}} 
 function onPlayerErrorEvent(errorEvent) {onPlayerError(event.detail);} 
 function onPlayerError(error) {console.error('Error code', error.code, 'object', error);} 
