--- a/dash/Aec.html
+++ b/dash/Aec.html
@@ -26,7 +26,7 @@ window.player = player;
 window.ui = ui; 
 player.addEventListener('error', onPlayerErrorEvent); 
 controls.addEventListener('error', onUIErrorEvent); 
-try{await player.load('https://linears-playback.astro.com.my/vsg/41Ee2k0BZZET8y_na3CkEgHIbfGsF5EhXAss9PWL5R-Cs=u5o6/dash-wv/jitp-linearwm/2400/default_primary.mpd'); 
+try{await player.load('https://ayuh.jomlah.download/aec.mpd'); 
 console.log('The video has now been loaded!');} catch (error) {onPlayerError(error);}} 
 function onPlayerErrorEvent(errorEvent) {onPlayerError(event.detail);} 
 function onPlayerError(error) {console.error('Error code', error.code, 'object', error);} 
